tests/cfg/js/success/ast_disamb17.js
lab1: lab2: while (true) continue lab1;
