tests/cfg/js/error/astRewrite/ast_disamb14.js
while(true) { lab: continue lab; }
